--- a/package.json
+++ b/package.json
@@ -20,5 +20,60 @@
   "bugs": {
     "url": "https://github.com/cheetahM/ReduxComponents/issues"
   },
-  "homepage": "https://github.com/cheetahM/ReduxComponents#readme"
+  "homepage": "https://github.com/cheetahM/ReduxComponents#readme",
+  "dependencies": {
+    "react": "^0.14.8",
+    "redux": "^3.3.1",
+    "react-redux": "^4.4.0",
+    "react-dom": "^0.14.7",
+    "react-addons-test-utils": "^0.14.6",
+    "eslint": "^1.10.3",
+    "babel-eslint": "^4.1.6",
+    "karma": "^0.13.22",
+    "karma-cli": "^0.1.2",
+    "karma-jasmine": "^0.3.8",
+    "karma-phantomjs-launcher": "^1.0.0",
+    "karma-chrome-launcher": "^0.2.2",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^1.7.0",
+    "core-js": "^2.2.1"
+  },
+  "devDependencies": {
+    "redux-thunk": "^2.0.1",
+    "babel-core": "^6.7.2",
+    "babel-loader": "^6.2.4",
+    "babel-preset-stage-2": "^6.5.0",
+    "babel-preset-es2015": "^6.1.2",
+    "babel-preset-react": "^6.1.2",
+    "babelify": "^7.2.0",
+    "redux-devtools": "^3.1.1",
+    "redux-logger": "^2.3.2",
+    "servedir": "^0.2.2",
+    "webpack": "^1.12.14"
+  },
+  "engines": {
+    "node": ">=4.2.0"
+  },
+  "main": "index.js",
+  "scripts": {
+    "start": "npm run build:dev",
+    "build:dev": "webpack-dev-server --progress --colors --watch --port 8083",
+    "jasmine:test:multiple": "karma start --single-run=false",
+    "jasmine:test:single": "karma start --single-run=true",
+    "lint": "eslint lib/**/*.js",
+    "watch": "watchify index.js -d -o bundle.js -v"
+  },
+  "browserify": {
+    "transform": [
+      [
+        "babelify",
+        {
+          "presets": [
+            "es2015",
+            "react"
+          ]
+        }
+      ]
+    ]
+  }
 }
